--- a/src/components/LeaderboardTable/styles.css
+++ b/src/components/LeaderboardTable/styles.css
@@ -2,12 +2,14 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    overflow-y: auto;
 }
 
 .tableTop{
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    gap: 12px;
 }
 
 .tableTop button{
